# cmakeLive555

./: CMakeLists.txt  win32config
UsageEnvironment/: CMakeLists.txt
groupsock/: CMakeLists.txt
liveMedia/: CMakeLists.txt
testProgs/: CMakeLists.txt  testRTSPClient.cpp
